packages/gumicorn/gumicorn-23.0.0.tar.gz/gumicorn-23.0.0/tests/requests/invalid/obs_fold_01.py
from gumicorn.http.errors import ObsoleteFolding

request = ObsoleteFolding
